[gd_scene load_steps=18 format=3 uid="uid://peou28wsfapx"]

[ext_resource type="Texture2D" uid="uid://34uy4thfehjh" path="res://Assets/UI/Map Assets/RecycleCenterShop.png" id="1_1f81g"]
[ext_resource type="Script" path="res://source/recycle_center_shop.gd" id="1_wrmqw"]
[ext_resource type="Texture2D" uid="uid://r16sb513wkua" path="res://Assets/UI/Shop/ShopUI.png" id="2_akioi"]
[ext_resource type="Texture2D" uid="uid://b08jjqwwilisd" path="res://Assets/UI/Shop/Shopkeeper/RecCentShopKButton.png" id="2_f7ifp"]
[ext_resource type="Texture2D" uid="uid://b1vtvky2npwxn" path="res://Assets/UI/Shop/Shopkeeper/RecCentShopKButtonPressed.png" id="3_8ghdk"]
[ext_resource type="Texture2D" uid="uid://cqo0oqjin7wsf" path="res://Assets/UI/Shop/Shopkeeper/RecCentShopKButtonHover.png" id="3_owymh"]
[ext_resource type="Texture2D" uid="uid://c0yhdq61up10b" path="res://Assets/UI/Shop/ExitIcon2.png" id="7_qw7nf"]
[ext_resource type="Texture2D" uid="uid://c6u6uc0fmj8as" path="res://Assets/UI/Shop/ExitSign/ExitSignGlow1.png" id="7_sxbti"]
[ext_resource type="Texture2D" uid="uid://dcptvumax0stf" path="res://Assets/UI/Shop/ExitSign/ExitSignBase.png" id="8_6hexs"]
[ext_resource type="Texture2D" uid="uid://bjkcvblfpygma" path="res://Assets/UI/Shop/ExitIcon2pressed.png" id="8_gfd43"]
[ext_resource type="Texture2D" uid="uid://4a3g6gwuwiiu" path="res://Assets/UI/Shop/ExitIcon2hover.png" id="9_gnmsi"]
[ext_resource type="Texture2D" uid="uid://de8ovbk3flxty" path="res://Assets/UI/Shop/ExitSign/ExitSignGlow2.png" id="9_psgl8"]
[ext_resource type="Texture2D" uid="uid://bht3o1tntpttu" path="res://Assets/UI/Shop/ShopGrid.png" id="10_7kbmc"]
[ext_resource type="Texture2D" uid="uid://c1do8wagvb255" path="res://Assets/UI/Shop/ExitSign/ExitSignPressed.png" id="10_iiysm"]
[ext_resource type="Texture2D" uid="uid://q4g6mjjt5fd5" path="res://Assets/UI/Shop/ExitSign/ExitSignHover.png" id="11_jupk7"]

[sub_resource type="LabelSettings" id="LabelSettings_u3uhk"]
font_size = 14
font_color = Color(0, 0, 0, 1)
shadow_color = Color(0.81901, 0.575683, 0.210194, 0.705882)

[sub_resource type="AnimatedTexture" id="AnimatedTexture_o2kh6"]
frames = 3
frame_0/texture = ExtResource("7_sxbti")
frame_1/texture = ExtResource("8_6hexs")
frame_1/duration = 1.0
frame_2/texture = ExtResource("9_psgl8")
frame_2/duration = 1.0

[node name="RecycleCenterShop" type="Node2D"]
script = ExtResource("1_wrmqw")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1150, 640)
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_1f81g")
expand_mode = 1

[node name="Shop_Keeper" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 613.0
offset_top = 299.0
offset_right = 728.0
offset_bottom = 399.0
scale = Vector2(0.980001, 0.954003)
texture_normal = ExtResource("2_f7ifp")
texture_pressed = ExtResource("3_8ghdk")
texture_hover = ExtResource("3_owymh")
ignore_texture_size = true
stretch_mode = 0

[node name="ShopWindow" type="NinePatchRect" parent="."]
offset_left = 768.0
offset_top = 116.0
offset_right = 1088.0
offset_bottom = 436.0
scale = Vector2(1.12037, 1.43219)
texture = ExtResource("2_akioi")

[node name="VBoxContainer" type="VBoxContainer" parent="ShopWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = 19.0
offset_right = -20.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.998873, 0.936825)

[node name="ShopTitleBar" type="HBoxContainer" parent="ShopWindow/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="ShopWindow/VBoxContainer/ShopTitleBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ShopWindow/VBoxContainer/ShopTitleBar"]
layout_mode = 2
text = "Recycle Center Trader"
label_settings = SubResource("LabelSettings_u3uhk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="Control" parent="ShopWindow/VBoxContainer/ShopTitleBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="TextureButton" parent="ShopWindow/VBoxContainer/ShopTitleBar/Exit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.5
offset_top = -9.0
offset_right = 12.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("7_qw7nf")
texture_pressed = ExtResource("8_gfd43")
texture_hover = ExtResource("9_gnmsi")
ignore_texture_size = true
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="ShopWindow/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="ScrollContainer" type="ScrollContainer" parent="ShopWindow/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="ShopWindow/VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="Slot1" type="TextureRect" parent="ShopWindow/VBoxContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_7kbmc")
expand_mode = 1

[node name="Slot2" type="TextureRect" parent="ShopWindow/VBoxContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_7kbmc")
expand_mode = 1

[node name="Slot3" type="TextureRect" parent="ShopWindow/VBoxContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_7kbmc")
expand_mode = 1

[node name="Slot4" type="TextureRect" parent="ShopWindow/VBoxContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_7kbmc")
expand_mode = 1

[node name="Slot5" type="TextureRect" parent="ShopWindow/VBoxContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_7kbmc")
expand_mode = 1

[node name="Slot6" type="TextureRect" parent="ShopWindow/VBoxContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_7kbmc")
expand_mode = 1

[node name="Slot7" type="TextureRect" parent="ShopWindow/VBoxContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_7kbmc")
expand_mode = 1

[node name="Slot8" type="TextureRect" parent="ShopWindow/VBoxContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_7kbmc")
expand_mode = 1

[node name="Slot9" type="TextureRect" parent="ShopWindow/VBoxContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_7kbmc")
expand_mode = 1

[node name="Slot10" type="TextureRect" parent="ShopWindow/VBoxContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_7kbmc")
expand_mode = 1

[node name="Slot11" type="TextureRect" parent="ShopWindow/VBoxContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_7kbmc")
expand_mode = 1

[node name="Slot12" type="TextureRect" parent="ShopWindow/VBoxContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_7kbmc")
expand_mode = 1

[node name="Slot13" type="TextureRect" parent="ShopWindow/VBoxContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_7kbmc")
expand_mode = 1

[node name="Slot14" type="TextureRect" parent="ShopWindow/VBoxContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_7kbmc")
expand_mode = 1

[node name="Slot15" type="TextureRect" parent="ShopWindow/VBoxContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_7kbmc")
expand_mode = 1

[node name="Slot16" type="TextureRect" parent="ShopWindow/VBoxContainer/MarginContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("10_7kbmc")
expand_mode = 1

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 3
anchors_preset = 0
offset_right = 60.0
offset_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ExitSceneButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 43.0
offset_top = 537.0
offset_right = 917.0
offset_bottom = 851.0
scale = Vector2(0.194449, 0.272819)
texture_normal = SubResource("AnimatedTexture_o2kh6")
texture_pressed = ExtResource("10_iiysm")
texture_hover = ExtResource("11_jupk7")
stretch_mode = 0

[connection signal="pressed" from="TextureRect/Shop_Keeper" to="." method="_on_shop_keeper_pressed"]
[connection signal="pressed" from="ShopWindow/VBoxContainer/ShopTitleBar/Exit/Button" to="." method="_on_exit_shop_button_pressed"]
[connection signal="pressed" from="Control/ExitSceneButton" to="." method="_on_exit_scene_button_pressed"]
